# turbolog

./: .dockerignore  .gitignore  AGENT.md  CLAUDE.md  README.md  deploy.sh  docker-compose.yml  docker-stack.yml  docker-stack.yml.tmpl  start-tunnel.sh
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 073b113da761_initial.py  40526f93ceed_add_user_admin_and_audited_flags.py  4e9aadb4fe66_add_allowed_emails_table.py  68c029c4286e_drop_jira_connections_table.py  9f69b1840a73_add_comments_to_task.py  a73a07e7dd4a_add_task_created_column.py  aa0c300eac79_add_task_status_category_column.py  aca9d22b4dbc_add_task_duedate_and_description_columns.py  b38e71ac3209_add_daily_closures_and_jira_comment_id.py  be2af9f21169_add_audit_periods_table.py  c1d2e3f4a5b6_add_telegram_chat_id_to_users.py  d3e4f5a6b7c8_add_pending_close_and_closed_at.py
backend/app/: config.py  database.py  dependencies.py  main.py  scheduler_runner.py
backend/scripts/: migrate_sqlite_to_postgres.py
backend/tests/: conftest.py  test_access_control.py  test_audit_admin_router.py  test_audit_service.py  test_auth_admin_seed.py  test_config.py  test_health.py  test_jira_client.py  test_jira_client_add_comment.py  test_jira_client_transition.py  test_jira_router.py  test_main.py  test_notifier.py  test_reminder_job.py  test_scheduler_runner.py  test_status_finalize.py  test_status_summary_router.py  test_telegram_bot.py  test_telegram_notifier.py  test_telegram_router.py  test_telegram_verification.py
frontend/: Dockerfile  (+3 more)
(+71 files in other folders)
